[gd_scene load_steps=3 format=3 uid="uid://ban1lqckfmkoc"]

[ext_resource type="Script" uid="uid://d2omyowkuiwve" path="res://scenes/main/tower/fire_turret/fire_turret.gd" id="1_mtrt7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mtrt7"]

[node name="FireTurret" type="Node2D"]
script = ExtResource("1_mtrt7")

[node name="Placeholder" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2
color = Color(0.60784316, 0.078431375, 0.14901961, 1)

[node name="Marker2D" type="Marker2D" parent="Placeholder"]
position = Vector2(43, 20.3)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(17.16, 17.16)
shape = SubResource("CircleShape2D_mtrt7")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
